--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,17 +1,15 @@
-{% include 'recipes/partials/head.html' %}
+{% extends 'global/base.html' %}
 
+{% block title %}Home |{% endblock title %}
 
-<body>
-    {% include 'recipes/partials/header.html' %}
-    {% include 'recipes/partials/search.html' %}
-
-    <main class="main-content-container">
-        <div class="main-content main-content-list container">
+{% block content %}
+    <div class="main-content main-content-list container">
+        {% for recipe in recipes %}
             {% include 'recipes/partials/recipe.html' %}
-        </div>
-    </main>
+        {% endfor %}
+        
 
-    {% include 'recipes/partials/footer.html' %}
-</body>
+    </div>
+{%  endblock content %}
 
-</html>
+ 
